--- a/darknet_yolov3_flutter/pubspec.yaml
+++ b/darknet_yolov3_flutter/pubspec.yaml
@@ -28,10 +28,14 @@ dependencies:
   mime:
   intl:
   async:
-
+  photo_view: ^0.9.2
+  liquid_swipe: ^1.1.0
+  cached_network_image:
+  flutter_swiper:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
+  search_widget:
 
 dev_dependencies:
   flutter_test:
