--- a/darknet_yolov3_flutter/pubspec.yaml
+++ b/darknet_yolov3_flutter/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   search_widget:
+  flappy_search_bar: 1.7.2
+  dropdown_search: ^0.4.4
+
 
 dev_dependencies:
   flutter_test:
